# Sentinel_db

./: .gitignore  Dockerfile  README.md  env.py  grader.py  inference.py  main.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  setup_db.py  template.db  test_env.py  verify_db.py
server/: app.py
